Refactoring after PMD analysis